# Smartfitv1

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
conf/: gunicorn.conf.py
src/smartfitv1/application/contracts/profiles/: requests.py  responses.py
src/smartfitv1/application/contracts/users/: responses.py
src/smartfitv1/application/usecases/: create_profile.py  get_user_by_id.py
src/smartfitv1/domain/common/: entities.py  exceptions.py  value_objects.py
src/smartfitv1/domain/profiles/: entities.py  repositories.py  value_objects.py
src/smartfitv1/domain/users/: entities.py  repositories.py  value_objects.py
src/smartfitv1/infrastructure/: config.py
src/smartfitv1/infrastructure/auth/: main.py  manager.py
src/smartfitv1/infrastructure/data_access/migrations/: env.py
src/smartfitv1/infrastructure/data_access/migrations/versions/: c6a331a8c1c3_init_db.py
src/smartfitv1/infrastructure/data_access/models/: base.py  user.py
src/smartfitv1/infrastructure/di/: main.py
src/smartfitv1/infrastructure/di/providers/: adapters.py  usecases.py
src/smartfitv1/infrastructure/persistence/migrations/: env.py
src/smartfitv1/infrastructure/persistence/models/: profile.py  user.py
src/smartfitv1/infrastructure/persistence/repositories/: profiles.py  users.py
src/smartfitv1/main/: web_api.py
src/smartfitv1/presentation/web_api/: check.py  exc_handlers.py
src/smartfitv1/presentation/web_api/routers/: profile_router.py  user_router.py
src/smartfitv1/presentation/web_api/schemas/: profiles.py  users.py
(+9 files in other folders)
