[tool.poetry]
name = "smartfit-v1"
version = "0.1.0"
description = "Backend v1"
authors = ["Pavel <epanov.pavel@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.2"}
async-sqlalchemy = "^1.0.0"
dishka = "^1.3.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
alembic = "^1.13.2"
gunicorn = "^23.0.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
src = ["src"]
exclude = ["src/smartfitv1/infrastructure/data_access/migrations/*"]
